<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".WithdrawActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/withdrawCardV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtwbalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/current_balance"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtwbalance2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@id/txtwbalance"
                        android:text="@string/symhypen"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/txtwbalance" />


                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/withdrawCardV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/withdrawCardV1"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:text="@string/request_withdrawal"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="10dp"
                        android:background="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/info_about_fees"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/amt"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/edwithAmt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:enabled="false"
                        android:inputType="numberDecimal"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/est_receive"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/edwithEstimatedAmt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:enabled="false"
                        android:inputType="numberDecimal"
                        android:maxLength="6"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/doge_address"
                        android:textSize="10sp"
                        android:layout_marginStart="10dp"
                        tools:ignore="SmallSp" />

                    <EditText
                        android:id="@+id/edwithDogeAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:enabled="false"
                        android:layout_marginStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/req_msg"
                        android:textSize="8sp"
                        android:layout_marginStart="10dp"
                        tools:ignore="SmallSp" />


                    <Button
                        android:id="@+id/btnwithRequest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/btnbg_gradient"
                        android:enabled="false"
                        android:text="@string/request" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000"
        android:orientation="vertical" />
</RelativeLayout>